- Show an error message when a folder can't be accesed in the filedialog

BUG: 191016 

svn path=/trunk/KDE/kdelibs/; revision=1013462